--- a/views/paginas/editarUser.ejs
+++ b/views/paginas/editarUser.ejs
@@ -14,7 +14,8 @@
 </head>
 
 <body class="container">
-    <form method="POST" action="/procesarRegistro">
+
+    <form method="POST" action="/procesarEdicion/<%= usuario._id %>">
         <div class="row mt-5">
             <div class="col-md-6">
                 <div class="form-group">
@@ -27,38 +28,38 @@
                 </div>
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
-                    <input type="text" class="form-control" id="nombre" name="nombre" />
+                    <input type="text" class="form-control" id="nombre" name="nombre" value="<%= usuario.nombre %>" />
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" />
+                    <input type="email" class="form-control" id="email" name="email" value="<%= usuario.email %>" />
                 </div>
                 <div class="form-group">
                     <label for="pais">Pais</label>
-                    <input type="text" class="form-control" id="pais" name="pais" />
+                    <input type="text" class="form-control" id="pais" name="pais" value="<%= usuario.pais %>" />
                 </div>
                 <div class="form-group">
                     <label for="barrio">Barrio</label>
-                    <input type="text" class="form-control" id="barrio" name="barrio" />
+                    <input type="text" class="form-control" id="barrio" name="barrio" value="<%= usuario.barrio %>" />
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="numeroId">Numero de Documento</label>
-                    <input type="number" class="form-control" id="numeroId" name="numeroId" />
+                    <input type="number" class="form-control" id="numeroId" name="numeroId" value="<%= usuario.numeroId %>" />
                 </div>
                 <div class="form-group">
                     <label for="apellidos">Apellidos</label>
-                    <input type="text" class="form-control" id="apellidos" name="apellidos" />
+                    <input type="text" class="form-control" id="apellidos" name="apellidos" value="<%= usuario.apellidos %>" />
                 </div>
                 <div class="form-group">
                     <label for="numCel">Numero Celular</label>
-                    <input type="number" class="form-control" id="numCel" name="numCel" />
+                    <input type="number" class="form-control" id="numCel" name="numCel" value="<%= usuario.numCel %>" />
                 </div>
                 <div class="form-group">
-                    <label for="cuidad">Ciudad</label>
-                    <input type="text" class="form-control" id="cuidad" name="cuidad" />
+                    <label for="ciudad">Ciudad</label>
+                    <input type="text" class="form-control" id="ciudad" name="ciudad" value="<%= usuario.ciudad %>" />
                 </div>
                 <div class="form-group mt-5">
                     <button type="submit" class="btn btn-primary">Guardar</button>
