--- a/views/paginas/index.ejs
+++ b/views/paginas/index.ejs
@@ -13,12 +13,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="container">
     <div class="row text-right mt-5">
         <a href="/nuevousuario" class="btn btn-primary">Agregar</a>
     </div>
     <div class="row mt-5 text-center">
-        <div class="col-md-10">
+        <div class="col-md-12">
             <table class="table table-hover">
                 <thead>
                     <tr>
@@ -61,9 +61,15 @@
                                 <%= item.barrio %>
                             </td>
                             <td>
-                                <div class="d-flex align-content-center flex-row justify-content-md-center">
-                                    <a href="" class="btn col-md-4 btn-sm mr-2 btn-primary">Editar</a>
-                                    <a href="" class="btn col-md-4 btn-sm btn-danger">Eliminar</a>
+                                <div class="dropdown">
+                                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                      Acciones
+                                    </a>
+
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                        <a class="dropdown-item" href="/editar/<%= item._id %>">Editar</a>
+                                        <a class="dropdown-item" href="/dropusuario/<%= item._id %>">Eliminar</a>
+                                    </div>
                                 </div>
                             </td>
                         </tr>
