--- a/views/paginas/nuevoUser.ejs
+++ b/views/paginas/nuevoUser.ejs
@@ -57,8 +57,8 @@
                     <input type="number" class="form-control" id="numCel" name="numCel" />
                 </div>
                 <div class="form-group">
-                    <label for="cuidad">Ciudad</label>
-                    <input type="text" class="form-control" id="cuidad" name="cuidad" />
+                    <label for="ciudad">Ciudad</label>
+                    <input type="text" class="form-control" id="ciudad" name="ciudad" />
                 </div>
                 <div class="form-group mt-5">
                     <button type="submit" class="btn btn-primary">Guardar</button>
